HelloUltraviolet/Fixtures/RejectedSource/FFI/ForeignContractDiagnostics/Expected.uv
//! Expected diagnostic metadata for the ForeignContractDiagnostics rejected-source specimen.

expectedDiagnostic("E-SEM-2853", "diagnostics.23.ForeignContractDiagnostics")
